--- a/headerr.html
+++ b/headerr.html
@@ -63,34 +63,32 @@
 <script>
   const names = [
     "Dr. Alakesh Kalita (Ph.D.)",
-    "डॉ. अलकेश कलिता (डी.ए)",
-    "ডঃ অলকেশ কলিতা (ডি.এ)"
+    "डॉ. अलकेश कलिता",
+    "ডঃ অলকেশ কলিতা"
   ];
 
+  const intro = "I'm, ";
   let currentIndex = 0;
   let currentLetterIndex = 0;
   let intervalId;
 
   function startTyping() {
     let nameElement = document.querySelector('.name');
-    if (currentLetterIndex === 0) {
-      nameElement.textContent = ''; // Clear existing content
-    }
     if (currentLetterIndex < names[currentIndex].length) {
-      nameElement.textContent += names[currentIndex][currentLetterIndex];
+      nameElement.textContent = intro + names[currentIndex].substring(0, currentLetterIndex + 1);
       currentLetterIndex++;
     } else {
       clearInterval(intervalId);
       setTimeout(() => {
-        intervalId = setInterval(deleteLetter, 50);
+        intervalId = setInterval(deleteName, 50);
       }, 1000);
     }
   }
 
-  function deleteLetter() {
+  function deleteName() {
     let nameElement = document.querySelector('.name');
     if (currentLetterIndex > 0) {
-      nameElement.textContent = names[currentIndex].substring(0, currentLetterIndex - 1);
+      nameElement.textContent = intro + names[currentIndex].substring(0, currentLetterIndex);
       currentLetterIndex--;
     } else {
       clearInterval(intervalId);
@@ -102,6 +100,7 @@
 
   intervalId = setInterval(startTyping, 100); // Start typing
 </script>
+
 
 
 
