--- a/headerr.html
+++ b/headerr.html
@@ -3,7 +3,7 @@
         <div class="col-sm-12 col-md-5 col-lg-5">
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
             <div class="profile-content pull-left">
-                <h3 class="name">Dr. Alakesh Kalita (Ph.D.)</h3>
+                <h3 class="name">Alakesh Kalita</h3>
                 <h5 class="desc">
                     <i class="fa fa-graduation-cap"> Research Fellow </i><br>
                     <i class="fa fa-institution"> National University of Singapore</i><br>
@@ -62,9 +62,9 @@
 
 <script>
   const names = [
-    "Dr. Alakesh Kalita (Ph.D.)",
-    "डॉ. अलकेश कलिता",
-    "ডঃ অলকেশ কলিতা"
+    "Alakesh Kalita",
+    "अलकेश कलिता",
+    "অলকেশ কলিতা"
   ];
 
   const intro = "I'm, ";
