--- a/headerr.html
+++ b/headerr.html
@@ -69,6 +69,7 @@
 
   const intro = "I'm, ";
   const introFont = "cursive";
+  intro.style.fontFamily = introFont; 
   let currentIndex = 0;
   let currentLetterIndex = 0;
   let intervalId;
@@ -76,8 +77,7 @@
   function startTyping() {
     let nameElement = document.querySelector('.name');
     if (currentLetterIndex < names[currentIndex].length) {
-      nameElement.textContent = intro + names[currentIndex].substring(0, currentLetterIndex + 1);
-      nameElement.style.fontFamily = introFont;  
+      nameElement.textContent = intro + names[currentIndex].substring(0, currentLetterIndex + 1); 
       currentLetterIndex++;
     } else {
       clearInterval(intervalId);
