--- a/headerr.html
+++ b/headerr.html
@@ -67,7 +67,7 @@
     "অলকেশ কলিতা"
   ];
 
-  const intro = "I'm, "; 
+  const intro = "Dr. "; 
   let currentIndex = 0;
   let currentLetterIndex = 0;
   let intervalId;
