--- a/headerr.html
+++ b/headerr.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Other meta tags and stylesheets -->
+</head>
+<body>
 <div class="container">  
     <div class="row">
         <div class="col-sm-12 col-md-5 col-lg-5">
@@ -101,7 +108,8 @@
   intervalId = setInterval(startTyping, 100); // Start typing
 </script>
 
-
+</body>
+</html>
 
 
 
