--- a/headerr.html
+++ b/headerr.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Website landing Page for Developers">
-    <meta name="author" content="3rd Wave Media">    
-    <link rel="shortcut icon" href="favicon.ico">  
+    <meta name="author" content="3rd Wave Media">
+    <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> 
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
-    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">   
+    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
     <!-- github acitivity css -->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
     <link rel="stylesheet" href="http://caseyscarborough.github.io/github-activity/github-activity-0.1.0.min.css">
-    
-    <!-- Theme CSS -->  
+    <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,10 +26,10 @@
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
-<div class="container">  
+<div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-5 col-lg-5">
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
+            <img class="profile-image img-fluid pull-left" src="assets/images/profile.png" alt="Alakesh Kalita" />
             <div class="profile-content pull-left">
                 <h2 class="name">Alakesh Kalita</h2>
                 <h5 class="desc">
@@ -48,7 +47,7 @@
                 </h5>
             </div><!--//profile-->
         </div>
-        <div class="col-sm-12 col-md-7 col-lg-7">            
+        <div class="col-sm-12 col-md-7 col-lg-7">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="topnav">
                     <ul class="nav navbar-nav">
@@ -96,7 +95,7 @@
     "অলকেশ কলিতা"
   ];
 
-  const intro = "Dr. "; 
+  const intro = "Dr. ";
   let currentIndex = 0;
   let currentLetterIndex = 0;
   let intervalId;
@@ -104,7 +103,7 @@
   function startTyping() {
     let nameElement = document.querySelector('.name');
     if (currentLetterIndex < names[currentIndex].length) {
-      nameElement.textContent = intro + names[currentIndex].substring(0, currentLetterIndex + 1); 
+      nameElement.textContent = intro + names[currentIndex].substring(0, currentLetterIndex + 1);
       currentLetterIndex++;
     } else {
       clearInterval(intervalId);
@@ -132,10 +131,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
