--- a/headerr.html
+++ b/headerr.html
@@ -48,45 +48,51 @@
             </div><!--//profile-->
         </div>
         <div class="col-sm-12 col-md-7 col-lg-7">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="topnav">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html" id="current"><i class="fa fa-home"></i> Home</a></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-search"></i> Research <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="publication.html"><i class="fa fa-file-text"></i> Publications</a></li>
-                                <li><a href="projects.html"><i class="fa fa-folder-open"></i> Projects</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-graduation-cap"></i> Academics <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="education.html"><i class="fa fa-graduation-cap"></i> Education</a></li>
-                                <li><a href="achieve.html"><i class="fa fa-trophy"></i> Achievements</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-briefcase"></i> Experience <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="work.html"><i class="fa fa-briefcase"></i> Work Experience</a></li>
-                                <li><a href="training.html"><i class="fa fa-certificate"></i> Workshop & Training</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact me</a></li>
-                    </ul>
-                </div>
-            </nav>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Your Brand</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="researchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-search"></i> Research
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="researchDropdown">
+                        <a class="dropdown-item" href="publication.html"><i class="fa fa-file-text"></i> Publications</a>
+                        <a class="dropdown-item" href="projects.html"><i class="fa fa-folder-open"></i> Projects</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="academicsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-graduation-cap"></i> Academics
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="academicsDropdown">
+                        <a class="dropdown-item" href="education.html"><i class="fa fa-graduation-cap"></i> Education</a>
+                        <a class="dropdown-item" href="achieve.html"><i class="fa fa-trophy"></i> Achievements</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="experienceDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-briefcase"></i> Experience
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="experienceDropdown">
+                        <a class="dropdown-item" href="work.html"><i class="fa fa-briefcase"></i> Work Experience</a>
+                        <a class="dropdown-item" href="training.html"><i class="fa fa-certificate"></i> Workshop & Training</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html"><i class="fa fa-envelope"></i> Contact me</a>
+                </li>
+            </ul>
         </div>
-    </div>
-</div><!--//container-->
+    </nav>
+</div>
+
 
 <script>
   const names = [
