--- a/headerr.html
+++ b/headerr.html
@@ -48,8 +48,18 @@
             </div><!--//profile-->
         </div>
  <div class="col-sm-12 col-md-7 col-lg-7">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar  navbar-static-top" role="navigation" style="background-color: white; background-image: none;">
+					<div class="navbar-header">
+					  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
+						style="background-color: #178ACC;">
+						<span class="sr-only" style="background-color: white;">Toggle navigation</span>
+						<span class="icon-bar" style="background-color: white;"></span>
+						<span class="icon-bar" style="background-color: white;"></span>
+						<span class="icon-bar" style="background-color: white;"></span>
+					  </button>						
+					</div>
                 <div class="topnav">
+                <div class="navbar-collapse collapse">    
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html" id="current"><i class="fa fa-home"></i> Home</a></li>
                         <li class="dropdown">
@@ -81,6 +91,7 @@
                         </li>
                         <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact me</a></li>
                     </ul>
+                 </ul>    
                 </div>
             </nav>
 
