--- a/headerr.html
+++ b/headerr.html
@@ -48,7 +48,7 @@
             </div><!--//profile-->
         </div>
  <div class="col-sm-12 col-md-7 col-lg-7">
-            <nav class="navbar  navbar-static-top" role="navigation" style="background-color: white; background-image: none;">
+            <nav class="navbar  navbar-static-top" role="navigation" >
 					<div class="navbar-header">
 					  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
 						style="background-color: #178ACC;">
