--- a/headerr.html
+++ b/headerr.html
@@ -24,6 +24,9 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jwarby/jekyll-pygments-themes@master/native.css" media="none" id="highlight_theme_dark" />
+    <script src="/assets/js/theme.js"></script>
+    <script src="/assets/js/dark_mode.js"></script>	
 </head>
 <body>
 <div class="container">
@@ -44,6 +47,7 @@
                     </i><br>
                     <i class="fa fa-phone-square"> +65 88104452</i><br>
                     <i class="fa fa-file-text"> [<a href="Alakesh_CV.pdf">Download CV</a>]</i> <br>
+		    <button id="light-toggle" title="Change theme"><i class="fas fa-moon"></i> <i class="fas fa-sun"></i></button>
                 </h5>
             </div><!--//profile-->
         </div>
