--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
                         <h2 class="heading">Contact me</h2>
                         <div class="content">
                             <div class="item">
+                            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">    
                                 <ul>
                                     <li>
                                         <p class="subDetails">
