--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                                     </li>
                                     <li>
                                         <ul class="social list-inline">
-                                            <li><a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"><i class="fa fa-linkedin" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"><i class="fab fa-linkedin-in" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
                                             <li><a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en"><i class="fab fa-google" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
                                             <li><a href="https://www.facebook.com/profile.php?id=100077436171241"><i class="fab fa-facebook" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
                                         </ul>
