--- a/publication.html
+++ b/publication.html
@@ -88,7 +88,7 @@
 			      <ol class="gradient-list">
 				<h3> <span class="label label-default">Conferences</span></h3>
 				<hr>
-				 <li><p class="subDetails"><b> A. Kalita</b>, A. Hazra, M. Gurusamy, “Efficient Schemes for Improved Performance in 6TiSCH Networks” in IEEE INFOCOM WKSHPS: The 10th International Workshop on Computer and Networking Experimental Research using Testbeds (CNERT'2023), Accepted, <a href="">Link</a></p></li>     
+				 <li><p class="subDetails"><b> A. Kalita</b>, A. Hazra, M. Gurusamy, “Efficient Schemes for Improved Performance in 6TiSCH Networks” in IEEE INFOCOM WKSHPS: The 10th International Workshop on Computer and Networking Experimental Research using Testbeds (CNERT'2023), Accepted, <a href="https://ieeexplore.ieee.org/document/10225947">Link</a> <blink style="color:red">New</blink></p></li>     
 				      
                                 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Opportunistic Priority Alternation Scheme for Faster Formation of 6TiSCH Network” in 21st International Conference on Distributed Computing and Networking (ICDCN), Jan 2020, pp. 1-5. <a href="https://dl.acm.org/doi/abs/10.1145/3369740.3369779"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
                                 
