--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 			   <script>
 					var i = 0;
-					var txt = 'I am an incoming Univeristy Lecturer in Singapore University of Technology and Design (<a href="https://www.sutd.edu.sg/"> SUTD</a>).';
+					var txt = 'I am an incoming Univeristy Lecturer in Singapore University of Technology and Design, Singapore.';
 					var speed = 100;
 					
 					function typeWriter() {
