--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			    <p id="news"></p>
 				<script>
 				var i = 0;
-				var txt = 'I am an incoming University Lecturer in Singapore University of Technology and Design (SUTD), Sinagpore.';
+				var txt = 'I am an incoming University Lecturer in Singapore University of Technology and Design (SUTD), Singapore.';
 				var speed = 100;
 				
 				function typeWriter() {
