--- a/publication.html
+++ b/publication.html
@@ -89,6 +89,8 @@
 				<h3> <span class="label label-default">Conferences</span></h3>
 				<hr>
 								  <li><p class="subDetails">  V. Sebastiani<sup>*</sup>, <b> A. Kalita<sup>*</sup></b>, M. Gurusamy, “Dynamic Resource Allocation and Pricing for Edge-Assisted Metaverse” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
+
+				 <li><p class="subDetails">  A. Hazra, B. Mali, <b> A. Kalita<sup>*</sup></b>, M. Gurusamy, “Federated Learning for Cost Optimized Offloading in Edge-enabled Industrial Internet of Things” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
 				      
 				  <li><p class="subDetails">  A. Hazra, <b> A. Kalita</b>, M. Gurusamy, “A Combined Approach of Industrial Edge Computing and Machine Learning for Predictive Maintenance” in IEEE GLOBECOM WKSHPS: AI/ML for Edge/Fog Networks program (A4E'2023), <blink style="color:red">Accepted</blink></p></li>      
 				 <li><p class="subDetails"><b> A. Kalita</b>, A. Hazra, M. Gurusamy, “Efficient Schemes for Improved Performance in 6TiSCH Networks” in IEEE INFOCOM WKSHPS: The 10th International Workshop on Computer and Networking Experimental Research using Testbeds (CNERT'2023), <a href="https://ieeexplore.ieee.org/document/10225947"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>     
