--- a/publication.html
+++ b/publication.html
@@ -88,9 +88,9 @@
 			      <ol class="gradient-list">
 				<h3> <span class="label label-default">Conferences</span></h3>
 				<hr>
-								  <li><p class="subDetails">  V. Sebastiani<sup>*</sup>, <b> A. Kalita<sup>*</sup></b>, M. Gurusamy, “Dynamic Resource Allocation and Pricing for Edge-Assisted Metaverse” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
+				<li><p class="subDetails">  V. Sebastiani<sup>*</sup>, <b> A. Kalita<sup>*</sup></b>, M. Gurusamy, “Dynamic Resource Allocation and Pricing for Edge-Assisted Metaverse” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
 
-				 <li><p class="subDetails">  A. Hazra, B. Mali, <b> A. Kalita<sup>*</sup></b>, M. Gurusamy, “Federated Learning for Cost Optimized Offloading in Edge-enabled Industrial Internet of Things” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
+				 <li><p class="subDetails">  A. Hazra, B. Mali, <b> A. Kalita</b>, M. Gurusamy, “Federated Learning for Cost Optimized Offloading in Edge-enabled Industrial Internet of Things” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
 				      
 				  <li><p class="subDetails">  A. Hazra, <b> A. Kalita</b>, M. Gurusamy, “A Combined Approach of Industrial Edge Computing and Machine Learning for Predictive Maintenance” in IEEE GLOBECOM WKSHPS: AI/ML for Edge/Fog Networks program (A4E'2023), <blink style="color:red">Accepted</blink></p></li>      
 				 <li><p class="subDetails"><b> A. Kalita</b>, A. Hazra, M. Gurusamy, “Efficient Schemes for Improved Performance in 6TiSCH Networks” in IEEE INFOCOM WKSHPS: The 10th International Workshop on Computer and Networking Experimental Research using Testbeds (CNERT'2023), <a href="https://ieeexplore.ieee.org/document/10225947"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>     
@@ -115,7 +115,14 @@
 				<hr>	
 					<li><p class="subDetails"><b> A. Kalita</b>, “Contiki-NG, CC2650 IoT devices, and FIT IoT-LAB.” <a href="https://www.researchgate.net/publication/358138446_Contiki-NG_CC2650_IoT_devices_and_FIT_IoT-LAB"><img src="assets/images/pdf.png" width="18" height="18"/></a> </p></li> 
 				<hr>
-				 </ol> 			    
+			 </ol> 	
+
+				<ol class="gradient-list">
+				<h3> <span class="label label-default">Preprint</span></h3>
+				<hr>	
+					<li><p class="subDetails">A. Kalita</b> and M. Gurusamy, “D2R2: Distributed and Dynamic Reputation based Resource Allocation in Metaverse”.  <a href="https://www.techrxiv.org/articles/preprint/D2R2_Distributed_and_Dynamic_Reputation_based_Resource_Allocation_in_Metaverse/21395316"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
+				<hr>
+			 </ol> 		    
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->		
