--- a/publication.html
+++ b/publication.html
@@ -120,7 +120,7 @@
 				<ol class="gradient-list">
 				<h3> <span class="label label-default">Preprint</span></h3>
 				<hr>	
-					<li><p class="subDetails">A. Kalita</b> and M. Gurusamy, “D2R2: Distributed and Dynamic Reputation based Resource Allocation in Metaverse”.  <a href="https://www.techrxiv.org/articles/preprint/D2R2_Distributed_and_Dynamic_Reputation_based_Resource_Allocation_in_Metaverse/21395316"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
+					<li><p class="subDetails"><b>A. Kalita</b> and M. Gurusamy, “D2R2: Distributed and Dynamic Reputation based Resource Allocation in Metaverse”.  <a href="https://www.techrxiv.org/articles/preprint/D2R2_Distributed_and_Dynamic_Reputation_based_Resource_Allocation_in_Metaverse/21395316"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
 				<hr>
 			 </ol> 		    
                         </div><!--//content-->  
@@ -136,7 +136,7 @@
   <!-- ******FOOTER****** --> 
   <footer class="footer">
     <div class="container text-center">
-            <small class="copyright"> &copy;2020 Alakesh Kalita. </small>
+            <small class="copyright"> &copy;2020-2023 Alakesh Kalita. </small>
     </div><!--//container-->
 </footer><!--//footer-->
  
