--- a/publication.html
+++ b/publication.html
@@ -88,6 +88,7 @@
 			      <ol class="gradient-list">
 				<h3> <span class="label label-default">Conferences</span></h3>
 				<hr>
+				<li><p class="subDetails">  <b> A. Kalita</b>, A. Hazra, M. Gurusamy, “RIM: Reputation-Based Incentives for Optimizing Service Pricing in Metaverse” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li>       
 				<li><p class="subDetails">  V. Sebastiani<sup>*</sup>, <b> A. Kalita<sup>*</sup></b>, M. Gurusamy, “Dynamic Resource Allocation and Pricing for Edge-Assisted Metaverse” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
 
 				 <li><p class="subDetails">  A. Hazra, B. Mali, <b> A. Kalita</b>, M. Gurusamy, “Federated Learning for Cost Optimized Offloading in Edge-enabled Industrial Internet of Things” in IEEE Future Networks World Forum (FNWF'2023), <blink style="color:red">Accepted</blink></p></li> 
