--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                          <h2 class="heading">Latest <img src="assets/images/source.gif" alt="news" width="50" height="60"></h2> 
                         <div class="content">
                             <ul class="list-unstyled">
-				<p style="color:blue"> Three papers are accepted in IEEE FNWF'23.<blink> </blink></p>  
-				<p style="color:blue"> One paper is accepted in IEEE FNWF'23.<blink> </blink></p>    
-				<p style="color:blue"> Three Articles are accepted in IEEE TMC, IEEE JIoT and IEEE Networking Letter.<blink> </blink></p>       
-				<p style="color:blue"> Received the Innovative Student Projects Award 2022 from INAE for my Ph.D. Thesis.<blink> </blink></p>   
+				<p style="color:blue"> Three papers have been accepted in IEEE FNWF'23.<blink> </blink></p>  
+				<p style="color:blue"> One paper has been accepted in IEEE FNWF'23.<blink> </blink></p>    
+				<p style="color:blue"> Three articles have been accepted in IEEE TMC, IEEE JIoT and IEEE Networking Letter.<blink> </blink></p>       
+			<!--	<p style="color:blue"> Received the Innovative Student Projects Award 2022 from INAE for my Ph.D. Thesis.<blink> </blink></p>    -->
 				    
                             </ul>
                         </div><!--//content-->  
