--- a/headerr.html
+++ b/headerr.html
@@ -33,10 +33,9 @@
             <div class="profile-content pull-left">
                 <h2 class="name">Alakesh Kalita</h2>
                 <h5 class="desc">
-                    <i class="fa fa-graduation-cap"> Research Fellow </i><br>
-                    <i class="fa fa-institution"> National University of Singapore</i><br>
-                    <i class="fa fa-envelope"> alakesh@ieee.org </i><br>
-                    <i class="fa fa-envelope"> alakesh@nus.edu.sg </i><br>
+                    <i class="fa fa-graduation-cap"> University Lecturer </i><br>
+                    <i class="fa fa-institution"> Singapore University of Technology and Design</i><br>
+                    <i class="fa fa-envelope"> alakesh.kalita1025@gmail.com </i><br>
                     <i class="fa fa-share-alt-square">
                         <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
                         <a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"> LinkedIn </a>|
@@ -71,6 +70,18 @@
                                 <li><a href="projects.html"><i class="fa fa-folder-open"></i> Projects</a></li>
                             </ul>
                         </li>
+
+			<li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fas fa-chalkboard-teacher"></i> Teaching <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="index.html"><i class="fas fa-book-open"></i> Courses</a></li>
+                                <li><a href="index.html"><i class="fas fa-user-graduate"></i> Students</a></li>
+                            </ul>
+                        </li>    
+			
+			<!--    
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-graduation-cap"></i> Academics <span class="caret"></span>
@@ -89,6 +100,9 @@
                                 <li><a href="training.html"><i class="fa fa-certificate"></i> Workshop & Training</a></li>
                             </ul>
                         </li>
+			-->
+
+			    
                         <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact me</a></li>
                     </ul>
                  </ul>    
