--- a/headerr.html
+++ b/headerr.html
@@ -24,6 +24,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+   <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 </head>
 <body>
 <div class="container">
@@ -34,7 +35,7 @@
                 <h2 class="name">Alakesh Kalita</h2>
                 <h5 class="desc">
                     <i class="fa fa-graduation-cap"> University Lecturer </i><br>
-                    <i class="fa fa-institution"> Singapore University of Technology and Design</i><br>
+                    <i class="fa fa-institution"> SUTD, Singapore</i><br>
                     <i class="fa fa-envelope"> alakesh.kalita1025@gmail.com </i><br>
                     <i class="fa fa-share-alt-square">
                         <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
