--- a/headerr.html
+++ b/headerr.html
@@ -74,7 +74,7 @@
 
 			<li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fas fa-chalkboard-teacher"></i> Teaching <span class="caret"></span>
+                                <i class='fas'>&#xf51c;></i> Teaching <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html"><i class="fas fa-book-open"></i> Courses</a></li>
