--- a/headerr.html
+++ b/headerr.html
@@ -74,11 +74,11 @@
 
 			<li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown">
-                                <i class='fas'>&#xf51c;></i> Teaching <span class="caret"></span>
+                                <i class="fa fa-edit"></i> Teaching <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html"><i class="fas fa-book-open"></i> Courses</a></li>
-                                <li><a href="index.html"><i class="fas fa-user-graduate"></i> Students</a></li>
+                                <li><a href="index.html"><i class="fa fa-group"></i> Students</a></li>
                             </ul>
                         </li>    
 			
