--- a/headerr.html
+++ b/headerr.html
@@ -77,7 +77,7 @@
                                 <i class="fa fa-edit"></i> Teaching <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="index.html"><i class="fas fa-book-open"></i> Courses</a></li>
+                                <li><a href="index.html"><i class="fa fa-book"></i> Courses</a></li>
                                 <li><a href="index.html"><i class="fa fa-group"></i> Students</a></li>
                             </ul>
                         </li>    
