--- a/headerr.html
+++ b/headerr.html
@@ -78,7 +78,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="index.html"><i class="fa fa-book"></i> Courses</a></li>
-                                <li><a href="index.html"><i class="fa fa-group"></i> Students</a></li>
+                                <li><a href="student.html"><i class="fa fa-group"></i> Students</a></li>
                             </ul>
                         </li>    
 			
