--- a/student.html
+++ b/student.html
@@ -24,6 +24,12 @@
             background-color: #f2f2f2; /* Color for even rows */
         }
     </style>
+    <script src="jquery.js"></script> 
+		    <script> 
+		    $(function(){
+		      $("#includedMyInfo").load("headerr.html"); 
+		    });
+    </script>     
 </head>
 <body>
     <header class="header">
