--- a/student.html
+++ b/student.html
@@ -70,24 +70,28 @@
                                     <th>Institute</th>
                                     <th>Degree</th>
                                     <th>Year</th>
+				    <th>Outcome</th>	
                                 </tr>
                                 <tr>
                                     <td>Valencia Sebastiani</td>
                                     <td>National University of Singapore, Singapore</td>
                                     <td>MSc</td>
                                     <td>2022-2023</td>
+				    <td>IEEE FNWF 2023</td>	
                                 </tr>
                                 <tr>
                                     <td>Joshi Poorvi</td>
                                     <td>National University of Singapore, Singapore</td>
                                     <td>MSc</td>
                                     <td>2023-2024</td>
+				    <td>-</td>	
                                 </tr>
                                 <tr>
                                     <td>Wu Xiaoxi</td>
                                     <td>National University of Singapore, Singapore</td>
                                     <td>MSc</td>
                                     <td>2023-2024</td>
+				    <td>-</td>	
                                 </tr>
                                 <!-- Add more student details here as needed -->
                             </table>
