--- a/contact.html
+++ b/contact.html
@@ -46,18 +46,16 @@
                                 <ul>
                                     <li>
                                         <p class="subDetails">
-                                            Communications & Networks Lab<br>
-                                            Department of Electrical and Computer Engineering<br>
-                                            Block E4, Level 6, Room 11/12<br>
-                                            4 Engineering Drive 3<br>
-                                            Singapore 117583
+                                            <b> Singapore University of Technology & Design </b>b>  <br>
+                                            8 Somapah Road, Building 1, Level 5 <br>
+                                            Office #: 1.202.23
+                                            Singapore 487372 <br>
                                         </p>
                                     </li>
                                     <li>
                                         <ul class="social list-inline">
-                                            <li><a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"><i class="fab fa-linkedin-in" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
-                                            <li><a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en"><i class="fab fa-google" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
-                                            <li><a href="https://www.facebook.com/profile.php?id=100077436171241"><i class="fab fa-facebook" style="font-size: 36px; text-shadow: 2px 2px 4px #000000;"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"><i class="fa fa-linkedin" style="font-size:36px"></i></a></li>
+                                            <li><a href="https://www.facebook.com/profile.php?id=100077436171241"><i class="fa fa-facebook-f" style="font-size:36px"></i></a></li>
                                         </ul>
                                     </li>
                                 </ul>
