--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,9 @@
                                 <ul>
                                     <li>
                                         <p class="subDetails">
-                                            <b> Singapore University of Technology & Design </b>b>  <br>
+                                            <b> Singapore University of Technology & Design </b>  <br>
                                             8 Somapah Road, Building 1, Level 5 <br>
-                                            Office #: 1.202.23
+                                            Office #: 1.202.23 <br>
                                             Singapore 487372 <br>
                                         </p>
                                     </li>
