--- a/contact.html
+++ b/contact.html
@@ -48,17 +48,18 @@
             <div class="primary col-md-12 col-sm-12 col-xs-12">
                 <section class="experience section">
                     <div class="section-inner" id="wor">
-                        <h2 class="heading">Contact me</h2>
+                        <h2 class="heading">Contact Me</h2>
                         <div class="content">
                             <div class="item">
-                            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">    
+                                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
                                 <ul>
                                     <li>
                                         <p class="subDetails">
-                                            <b> Singapore University of Technology & Design </b>  <br>
-                                            8 Somapah Road, Building 1, Level 2 <br>
-                                            Office #: 1.202.23 <br>
-                                            Singapore 487372 <br>
+                                            <i class="fas fa-university"></i>
+                                            <b>Singapore University of Technology & Design</b><br>
+                                            8 Somapah Road, Building 1, Level 2<br>
+                                            Office #: 1.202.23<br>
+                                            Singapore 487372
                                         </p>
                                     </li>
                                 </ul>
@@ -69,19 +70,27 @@
             </div><!--//primary-->
         </div><!--//row-->
     </div><!--//container-->
+</body>
 
+
+ <!-- ******FOOTER****** --> 
     <footer class="footer">
         <div class="container text-center">
-            <small class="copyright">&copy;2020 Alakesh Kalita.</small>
+                 <small class="copyright"> &copy;2020-2023 Alakesh Kalita. </small>
         </div><!--//container-->
     </footer><!--//footer-->
-
+ 
+    <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
+    <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script> 
+    <!-- github activity plugin -->
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
     <script type="text/javascript" src="http://caseyscarborough.github.io/github-activity/github-activity-0.1.0.min.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <!-- custom js -->
+    <script type="text/javascript" src="assets/js/main.js"></script>            
 </body>
-</html>
+
+
+<!DOCTYPE html>
