--- a/headerr.html
+++ b/headerr.html
@@ -36,7 +36,7 @@
                 <h5 class="desc">
                     <i class="fa fa-graduation-cap"> University Lecturer </i><br>
                     <i class="fa fa-institution"> SUTD, Singapore</i><br>
-                    <i class="fa fa-envelope"> alakesh[DOT]kalita1025[AT]gmail[DOT]com </i><br>
+                    <i class="fa fa-envelope"> alakesh.kalita1025[AT]gmail.com </i><br>
                     <i class="fa fa-share-alt-square">
                         <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
                         <a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"> LinkedIn </a>|
