--- a/publication.html
+++ b/publication.html
@@ -122,7 +122,8 @@
 				<h3> <span class="label label-default">Preprint</span></h3>
 				<hr>	
 					<li><p class="subDetails"><b>A. Kalita</b> and M. Gurusamy, “D2R2: Distributed and Dynamic Reputation based Resource Allocation in Metaverse”.  <a href="https://www.techrxiv.org/articles/preprint/D2R2_Distributed_and_Dynamic_Reputation_based_Resource_Allocation_in_Metaverse/21395316"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
-				<hr>
+<li><p class="subDetails">J. Poorvi, <b>A. Kalita</b>, and M. Gurusamy, “Reliable and Efficient Data Collection in UAV-based IoT Networks”.  <a href="http://arxiv.org/abs/2311.05303"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
+					<hr>
 			 </ol> 		    
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
