--- a/publication.html
+++ b/publication.html
@@ -72,7 +72,9 @@
                               <ol class="gradient-list">
 				<h3> <span class="label label-default">Journals</span></h3>
 				<hr>
-				<!-- <li><p class="subDetails"><b> A. Kalita</b> and M. Gurusamy, “D2R2: Distributed and Dynamic Reputation based Resource Allocation in Metaverse”, (Under Review).  <a href="https://www.techrxiv.org/articles/preprint/D2R2_Distributed_and_Dynamic_Reputation_based_Resource_Allocation_in_Metaverse/21395316"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>   -->  
+
+				 <li><p class="subDetails"> A. Hazra, <b> A. Kalita</b>, and M. Gurusamy, “Meeting the Requirements of Internet of Things: The Promise of Edge Computing” in <b> IEEE Internet of Things Journal</b>, 2023, (Accepted). </p></li>     
+				      
 				   
 				 <li><p class="subDetails"><b> A. Kalita</b>, A. Hazra and M. Gurusamy, “Parrando’s Paradox based Enhanced Beacon Transmission in 6TiSCH Networks” in <b> IEEE Networking Letters</b>, vol. NA, no. NA, pp. 1-4, 2023, (Accepted). <a href="https://ieeexplore.ieee.org/document/10121813"><img src="assets/images/pdf.png" width="18" height="18"/></a> <blink style="color:red"> New</blink></p></li>     
 				 <li><p class="subDetails"><b> A. Kalita</b> and M. Khatua, “Time-Variant RGB Model for Minimal Cell Allocation and Scheduling in 6TiSCH Networks” in <b> IEEE Transactions on Mobile Computing</b>, IF=7.9, vol. NA, no. NA, pp. 1-12, 2023, (Accepted). <a href="https://ieeexplore.ieee.org/document/10032650"><img src="assets/images/pdf.png" width="18" height="18"/></a> <blink style="color:red">New</blink> </p></li>     
