--- a/index.html
+++ b/index.html
@@ -99,16 +99,13 @@
               <aside class="info aside section">
                     <div class="section-inner" id="con">
                          <h2 class="heading">Latest <img src="assets/images/source.gif" alt="news" width="50" height="60"></h2> 
-                        <div class="content">
-                            <ul class="list-unstyled">
-				<p style="color:blue"> 26 Oct'23: Joined SUTD as Lecturer.<blink> </blink></p>
-				<p style="color:blue"> 2023: Three papers have been accepted in IEEE FNWF'23.<blink> </blink></p>  
-				<p style="color:blue"> 2023: One paper has been accepted in IEEE Globecom WKSP'23.<blink> </blink></p>    
-				<p style="color:blue"> 2023: Three articles have been accepted in IEEE TMC, IEEE JIoT and IEEE Networking Letter.<blink> </blink></p>       
-			<!--	<p style="color:blue"> Received the Innovative Student Projects Award 2022 from INAE for my Ph.D. Thesis.<blink> </blink></p>    -->
-				    
-                            </ul>
-                        </div><!--//content-->  
+                       <div class="panel-body" style="height:410px; overflow-y: scroll;">
+				<table>
+				<tr><td style="border: 1px dotted black; border-collapse: collapse;">[Nov. 2023] <b>Selected Areas in Communications (SAC) - E-Health Track Chair</b> at the <b>IEEE ICC 2025</b>, Montreal, Canada.</td></tr>
+				<tr><td style="border: 1px dotted black; border-collapse: collapse;">[May 2023] "<b>TiME: Time-sensitive Multihop Data Transmission in Software-Defined Edge Networks for 
+				<\table>
+				</div>
+<br><br>
                     </div><!--//section-inner-->                 
 </aside><!--//aside-->
 	      
