--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
               <aside class="info aside section">
                     <div class="section-inner" id="con">
                          <h2 class="heading">Latest <img src="assets/images/source.gif" alt="news" width="50" height="60"></h2> 
+			<div class="content">    
                        <ul class="ul1">
 					  <li class="li4"><span class="s3"></span><span class="s1">26 Oct'23: Joined SUTD as Lecturer. <br>
 					2023: Three papers have been accepted in IEEE FNWF'23. <br>
 					2023: One paper has been accepted in IEEE Globecom WKSP'23. <br>
 					2023: Three articles have been accepted in IEEE TMC, IEEE JIoT and IEEE Networking Letter.<span class="Apple-converted-space"> </span></span></li>
 					</ul>
+			 </div>	
                     </div><!--//section-inner-->                 
 </aside><!--//aside-->
 	      
