--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			    <p id="news"></p>
 				<script>
 				var i = 0;
-				var txt = 'Build a 6TiSCH Cell Allocation Simulator Using Python. Click <a href="https://www.youtube.com/watch?v=EC95LQFIf4s">here</a>  to watch Simulation video ';
+				var txt = 'Build a 6TiSCH Cell Allocation Simulator Using Python. Visit my "Project" page for more details ';
 				var speed = 100;
 				
 				function typeWriter() {
