--- a/publication.html
+++ b/publication.html
@@ -126,7 +126,18 @@
 					<li><p class="subDetails"><b>A. Kalita</b> and M. Gurusamy, “D2R2: Distributed and Dynamic Reputation based Resource Allocation in Metaverse”.  <a href="https://www.techrxiv.org/articles/preprint/D2R2_Distributed_and_Dynamic_Reputation_based_Resource_Allocation_in_Metaverse/21395316"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
 <li><p class="subDetails">J. Poorvi, <b>A. Kalita</b>, and M. Gurusamy, “Reliable and Efficient Data Collection in UAV-based IoT Networks”.  <a href="http://arxiv.org/abs/2311.05303"><img src="assets/images/pdf.png" width="18" height="18"/></a></p></li>
 					<hr>
-			 </ol> 		    
+			 </ol> 	
+
+
+				<ol class="gradient-list">
+				<h3> <span class="label label-default">Simulator</span></h3>
+				<hr>		
+				<h3>6TiSCH Cell Allocation Simulator</h3>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/EC95LQFIf4s" frameborder="0" allowfullscreen></iframe>
+				 </ol> 
+					
+
+				    
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->		
