--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			    <p id="news"></p>
 				<script>
 				var i = 0;
-				var txt = 'Build a 6TiSCH Cell Allocation Simulator Using Python. Visit my "Publication" page for more details ';
+				var txt = 'Built a 6TiSCH Cell Allocation Simulator Using Python. Visit my "Publication" page for more details ';
 				var speed = 100;
 				
 				function typeWriter() {
