--- a/publication.html
+++ b/publication.html
@@ -133,6 +133,7 @@
 				<h3> <span class="label label-default">Simulator</span></h3>
 				<hr>		
 				<h3>6TiSCH Cell Allocation Simulator</h3>
+				<li><p class="subDetails"><b>Please contact me over mail for the source codes: alakesh[dot]kalita1025[at]gmail[dot].com </b> </p></li>	
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/EC95LQFIf4s" frameborder="0" allowfullscreen></iframe>
 				 </ol> 
 					
