--- a/index.html
+++ b/index.html
@@ -98,26 +98,20 @@
 
 	
 <div class="secondary col-md-4 col-sm-12 col-xs-12">
-         <!--     <aside class="info aside section">
-                    <div class="section-inner" id="con">
-                         <h2 class="heading">Latest <img src="assets/images/source.gif" alt="news" width="50" height="60"></h2> 
-			<div class="content">    
-                        <ul class="list-unstyled">
-				<p style="color:blue">Paper Accepted in IEEE VTC2024 .<blink> </blink></p> 
-				<p style="color:blue">Article Accepted in IEEE IoT Journal.<blink> </blink></p> 
-				<p style="color:blue">26 Oct'23: Joined SUTD as Lecturer.<blink> </blink></p> 
-				
-					</ul>
-			 </div>	
-                    </div><!--//section-inner-->                 
-</aside><!--//aside-->		
--->
-	<h2><a name="News">Recent News</a></h2>
-		<div class="infoblock">
-		<div class="blockcontent">
-		<p>31-12-2023 : I launched <a href="https://ca-deadlines.github.io/">CA Deadlines</a>.</p>
-		<p>25-10-2023 : I am guest editing a special issue of <a href="https://ieee-cas.org/files/ieeecass/2023-10/JETCAS_CFP_Final.pdf">IEEE JETCAS</a>.</p>
-</div></div>
+             <div class="container_second">
+		    <h2 class="heading">Recent News</h2>
+		    <ul class="news-list">
+		        <li class="news-item">
+		            <p><strong>January 25, 2024:</strong> Paper Accepted in IEEE VTC2024</p>
+		        </li>
+		        <li class="news-item">
+		            <p><strong>February 10, 2024:</strong> Article Accepted in IEEE IoT Journal</p>
+		        </li>
+		        <li class="news-item">
+		            <p><strong>October 26, 2023:</strong> Joined SUTD as Lecturer</p>
+		        </li>
+		    </ul>
+	     </div>
                 
 </div><!--//secondary-->    
 </div><!--//row-->
