--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 	
 <div class="secondary col-md-4 col-sm-12 col-xs-12">
-             <div class="container_second">
-		    <h2 class="heading">Recent News</h2>
+             <div class="container_news">
+		    <h2 class="heading_news">Recent News</h2>
 		    <ul class="news-list">
 		        <li class="news-item">
 		            <p><strong>January 25, 2024:</strong> Paper Accepted in IEEE VTC2024</p>
@@ -111,7 +111,7 @@
 		            <p><strong>October 26, 2023:</strong> Joined SUTD as Lecturer</p>
 		        </li>
 		    </ul>
-	     </div>
+	   </div>
                 
 </div><!--//secondary-->    
 </div><!--//row-->
