--- a/student.html
+++ b/student.html
@@ -85,7 +85,7 @@
                                     <td>National University of Singapore, Singapore</td>
                                     <td>MSc</td>
                                     <td>2023-2024</td>
-				    <td>-</td>	
+				    <td>IEEE VTC 2024</td>	
                                 </tr>
                                 <tr>
                                     <td>Wu Xiaoxi</td>
