--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 		    <h2 class="heading_news">Recent News</h2>
 		    <ul class="news-list">
 		        <li class="news-item">
-		            <p><strong>March 05, 2024:</strong> Paper Accepted in IEEE VTC2024</p>
+		            <p><strong>05-03-2024:</strong> Paper Accepted in IEEE VTC 2024</p>
 		        </li>
 			    
 		        <li class="news-item">
-		            <p><strong>December 27, 2023:</strong> Article Accepted in IEEE IoT Journal</p>
+		            <p><strong>27-12-2023:</strong> Article Accepted in IEEE IoT Journal</p>
 		        </li>
 		        <li class="news-item">
-		            <p><strong>October 26, 2023:</strong> Joined SUTD as Lecturer</p>
+		            <p><strong>26-10-2023:</strong> Joined SUTD as Lecturer</p>
 		        </li>
 		    </ul>
 	   </div>
