--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@
 		        <li class="news-item">
 		            <p><strong>26-10-2023:</strong> Joined SUTD as Lecturer</p>
 		        </li>
+			<li class="news-item">
+		            <p><strong>10-02-2023:</strong> Received Best Thesis Award from INAE, India</p>
+		        </li>    
+			<li class="news-item">
+		            <p><strong>17-05-2022:</strong> Defended my Ph.D. Thesis at IIT Guwahati, India </p>
+		        </li>    
+			<li class="news-item">
+		            <p><strong>25-04-2022:</strong> Joined NUS, Singapore as Research Fellow</p>
+		        </li>  
+			<li class="news-item">
+		            <p><strong>27-01-2022:</strong>Submitted my Ph.D. Thesis at IIT Guwahati, India</p>
+		        </li>   
+			<li class="news-item">
+		            <p><strong>01-01-2018:</strong>Joined IIT Guwahati, India as a Ph.D. Scholar</p>
+		        </li>     
 		    </ul>
 	   </div>
                 
