--- a/index.html
+++ b/index.html
@@ -112,8 +112,14 @@
 		            <p><strong>26-10-2023:</strong> Joined SUTD as Lecturer</p>
 		        </li>
 			<li class="news-item">
+		            <p><strong>25-09-2023:</strong> Three papers accepted in IEEE FNWF 2023</p>
+		        </li>    
+			<li class="news-item">
 		            <p><strong>10-02-2023:</strong> Received Best Thesis Award from INAE, India</p>
 		        </li>    
+			<li class="news-item">
+		            <p><strong>01-01-2023:</strong> Article accepted in IEEE Transactions on Mobile Computing</p>
+		        </li>     
 			<li class="news-item">
 		            <p><strong>17-05-2022:</strong> Defended my Ph.D. Thesis at IIT Guwahati, India </p>
 		        </li>    
