--- a/headerr.html
+++ b/headerr.html
@@ -36,14 +36,14 @@
                 <h5 class="desc">
                     <i class="fa fa-graduation-cap"> University Lecturer </i><br>
                     <i class="fa fa-institution"> SUTD, Singapore</i><br>
-                    <i class="fa fa-envelope"> alakesh.kalita1025[AT]gmail.com </i><br>
+                    <i class="fa fa-envelope"> alakesh[dot]kalita1025[AT]gmail.com </i><br>
                     <i class="fa fa-share-alt-square">
                         <a href="https://scholar.google.com/citations?user=hVUJBdvOhCIC&hl=en">Google Scholar </a>|
                         <a href="https://www.linkedin.com/in/alakesh-kalita-ph-d-39447055/"> LinkedIn </a>|
                         <a href="https://www.researchgate.net/profile/Alakesh_Kalita3"> RG </a>|
                     </i><br>
-                    <i class="fa fa-phone-square"> +65 88104452</i><br>
-              <!--      <i class="fa fa-file-text"> [<a href="Alakesh_CV.pdf">Download CV</a>]</i> <br>	    -->
+                  <!--    <i class="fa fa-phone-square"> +65 88104452</i><br>
+                  <i class="fa fa-file-text"> [<a href="Alakesh_CV.pdf">Download CV</a>]</i> <br>	    -->
                 </h5>
             </div><!--//profile-->
         </div>
