--- a/headerr.html
+++ b/headerr.html
@@ -49,6 +49,7 @@
         </div>
  <div class="col-sm-12 col-md-6 col-lg-6">
             <nav class="navbar  navbar-static-top" role="navigation" >
+		<div class="profile-content pull-right">    
 					<div class="navbar-header">
 					  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
 						style="background-color: #178ACC;">
@@ -108,6 +109,7 @@
                     </ul>
                  </ul>    
                 </div>
+	       </div>	
             </nav>
 
         </div>
