--- a/publication.html
+++ b/publication.html
@@ -51,7 +51,7 @@
             <div class="primary col-md-12 col-sm-12 col-xs-12">
                 <section class="latest section">
                     <div class="section-inner" id="pub">
-                        <h2 class="heading">Publications</h2>
+                        <h2 class="heading">Research Contributions</h2>
                         <div class="content">    
                         
                             <div class="profile-content pull-left" >
