--- a/publication.html
+++ b/publication.html
@@ -110,6 +110,14 @@
                               </ol> 
 
 
+
+			</div>
+			</div>	
+
+			<div class="content">    
+                        <hr class="divider" />
+                        <div class="item row">	
+
 			<ol class="gradient-list">
 				<h3> <span class="label label-default">Technical Report</span></h3>
 				<hr>	
@@ -126,6 +134,13 @@
 			 </ol> 	
 
 
+			</div>
+			</div>	
+
+			<div class="content">    
+                        <hr class="divider" />
+                        <div class="item row">		
+
 				<ol class="gradient-list">
 				<h3> <span class="label label-default">Simulator</span></h3>
 				<hr>		
@@ -134,7 +149,13 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/EC95LQFIf4s" frameborder="0" allowfullscreen></iframe>
 				<hr>
 				</ol> 
-					
+
+			</div>
+			</div>	
+
+			<div class="content">    
+                        <hr class="divider" />
+                        <div class="item row">	
 				<ol class="gradient-list">
 				<h3> <span class="label label-default">Ph.D Thesis</span></h3>
 				<hr>	
